--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,19 @@
 
 <body>
   <div id="wrapper">
+    <!-- Bootstrap navbar with button-->
+      <nav class="navbar navbar-inverse">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="#">MongoDB Scraper</a>
+            </div>
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#">Saved Articles</a></li>
+            </ul>
+            <button class="btn btn-danger navbar-btn">Scrape New Articles</button>
+          </div>
+        </nav>
     <h1>Note Scraper</h1>
     <h2>
       <i>If you can do this...the homework should be no problem.</i>
