Delete note working. Scrape working. Need to do save article.

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#">Saved Articles</a></li>
             </ul>
-            <button class="btn btn-danger navbar-btn">Scrape New Articles</button>
+            <button class="btn btn-danger navbar-btn" id="scrape">Scrape New Articles</button>
           </div>
         </nav>
     <h1>Note Scraper</h1>
