Delete article routes and js working. Time add save article

--- a/public/index.html
+++ b/public/index.html
@@ -16,22 +16,19 @@
     <!-- Bootstrap navbar with button-->
       <nav class="navbar navbar-inverse">
           <div class="container-fluid">
-            <div class="navbar-header">
-              <a class="navbar-brand" href="#">MongoDB Scraper</a>
-            </div>
+              <div class="navbar-header">
+                  <a class="navbar-brand" href="#">Mongo Web Scraper</a>
+                </div>
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#">Saved Articles</a></li>
+              <!--<li><a href="#">Saved Articles</a></li>-->
             </ul>
             <button class="btn btn-danger navbar-btn" id="scrape">Scrape New Articles</button>
           </div>
         </nav>
-    <h1>Note Scraper</h1>
-    <h2>
-      <i>If you can do this...the homework should be no problem.</i>
-    </h2>
     <div id="articles"></div>
     <div id="notes"></div>
+    
   </div>
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
